<resources>

    <string name="app_name">Doc2Family</string>

<!--    buttons / titles / etc -->
    <string name="docBox">DOCTOR</string>
    <string name="choosetxt">You are: </string>
    <string name="friendBox">FRIEND</string>
    <string name="add_friend">Add Friend</string>
    <string name="no_patient">No patient :(</string>
    <string name="admin">admin</string>
    <string name="not_admin">not admin</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="reset_password">Send</string>
    <string name="forgot_your_password_title">Forgot your password?</string>
    <string name="add_patient">Add Patient</string>
    <string name="create_new_patient">Create New Patient</string>
    <string name="teudat_zehut">Teudat Zehut</string>
    <string name="my_patients">My Patients</string>
    <string name="add_caregiver">Add Caregiver</string>
    <string name="caregivers_title">Caregivers</string>
    <string name="questions">Questions</string>
    <string name="caregivers_plural">Caregivers</string>
    <string name="caregiver_single">Caregiver</string>
    <string name="friends">Friends</string>
    <string name="remove_caregiver_format">Remove %s?</string>
    <string name="remove">Remove</string>
    <string name="add_question">Add Question</string>
    <string name="delete_update_title">Delete update?</string>
    <string name="friends_list_title_format">%s\'s friends</string>
    <string name="caregivers_list_title_format">%s\'s caregivers</string>


<!--    hints-->
    <string name="doctors_answer_hint">The doctor\'s answer will appear here.</string>
    <string name="submit_answer_hint">Submit an answer</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="friends_email_hint">Enter friend\'s tz</string>
    <string name="caregiver_tz_hint">Enter caregiver\'s tz</string>

<!--    messages -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password_explanation">Don\'t worry, resetting your password is easy! Just tell us the email address you used to register with Doc2Family.</string>
    <string name="email_info_message">Please enter a valid email address.</string>
    <string name="first_name_info_message">Others will see this name when you follow a patient.\nFirst name should be between 3 and 20 characters long.</string>
    <string name="last_name_info_message">Others will see this name when you follow a patient.\nLast name should be between 3 and 20 characters long.</string>
    <string name="password_info_message">Password should be at least 6 characters long.</string>
    <string name="verify_password_info_message">Verify password - enter the same password again.</string>
    <string name="caregiver_info_message">Are you a doctor/nurse/other kind of caregiver?\nCaregivers have special permissions like adding/editing patients etc.</string>
    <string name="id_number">ID number</string>
    <string name="tz_info_message">Please enter your Teudat Zeut number</string>
    <string name="add_update">Add an update</string>
    <string name="add_admin">Add admin</string>
    <string name="delete">DELETE</string>
    <string name="added_patient_as_friend_message">Following patient</string>
    <string name="added_patient_as_caregiver_message">Adding to your patients</string>
    <string name="already_following_patient_message">You are already following this patient!</string>
    <string name="caregiver_unable_to_add_patient_message">Another caregiver must add you\nin order to access this patient</string>
    <string name="friend_unable_to_add_patient_message">An admin must add you\nin order to follow this patient</string>
    <string name="updated_question_message">Updated question!</string>
    <string name="unable_to_update_question_message">Error updating question :(</string>
    <string name="added_caregiver_message">Successfully added to caregivers</string>
    <string name="unable_to_add_caregiver_message">Error adding caregiver :(</string>
    <string name="removed_friend_message">Successfully removed friend</string>
    <string name="unable_to_remove_friend_message">Error removing friend :(</string>
    <string name="updated_friend_message">Updated friend</string>
    <string name="removed_caregiver_message">Successfully removed caregiver</string>
    <string name="unable_to_remove_caregiver_message">Error removing caregiver :(</string>
    <string name="added_update_message">Added update</string>
    <string name="unable_to_add_update_message">Error adding update :(</string>
    <string name="removed_update_message">Deleted update</string>
    <string name="unable_to_remove_update_message">Error removing update :(</string>

</resources>
