<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PatientInfoActivity">

    <TextView
        android:id="@+id/activity_patient_info_text_view_title"
        android:textColor="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/activity_patient_info_text_view_diagnosis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/diagnosis"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_patient_info_text_view_title" />


    <TextView
        android:id="@+id/activity_patient_info_text_view_patient_diagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/activity_patient_info_text_view_title"
        app:layout_constraintLeft_toRightOf="@+id/activity_patient_info_text_view_diagnosis_title"
        />

    <TextView
        android:id="@+id/activity_patient_info_text_view_tz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/teudat_zehut"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_patient_info_text_view_diagnosis_title" />

    <TextView
        android:id="@+id/activity_patient_info_text_view_tz_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/activity_patient_info_text_view_tz_title"
        app:layout_constraintTop_toBottomOf="@+id/activity_patient_info_text_view_diagnosis_title" />




    <Button
        android:id="@+id/activity_patient_info_button_add_update"
        android:background="@drawable/customized_button"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/add_update"
        android:layout_margin="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/recycler_updates"
        app:layout_constraintTop_toBottomOf="@id/activity_patient_info_text_view_tz_title"
        />

    <Button
        android:id="@+id/activity_patient_info_button_add_admin"
        android:background="@drawable/customized_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_admin"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/recycler_updates"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_patient_info_text_view_tz_title" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler_updates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:scrollbars="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/activity_patient_info_button_goto_caregivers"
        app:layout_constraintTop_toBottomOf="@+id/activity_patient_info_button_add_update" />

    <Button
        android:id="@+id/activity_patient_info_button_goto_questions"
        android:background="@drawable/customized_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_height="50dp"
        android:text="@string/questions"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/activity_patient_info_button_goto_caregivers"
        android:background="@drawable/customized_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/caregivers_plural"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/activity_patient_info_button_goto_questions"
        app:layout_constraintRight_toLeftOf="@+id/activity_patient_info_button_goto_friends"
        />

    <Button
        android:id="@+id/activity_patient_info_button_goto_friends"
        android:background="@drawable/customized_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/friends"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>