<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ForgotPasswordActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:text="@string/forgot_your_password_title"
        android:textColor="@color/navy"
        android:textSize="30sp"
    />

    <TextView
        android:id="@+id/forgot_password_explanation"
        android:layout_width="374dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password_explanation"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email_for_reset"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:hint="Enter email"
            android:textSize="18dp"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/customized_button"
        android:text="@string/reset_password"
        android:textColor="@color/white"
    />


</LinearLayout>