<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddPatientActivity">

    <TextView
        android:id="@+id/text_view_create_patients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_patient"
        android:textColor="@color/navy"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/activity_add_patient_text_view_tz_title"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:text="@string/teudat_zehut"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_add_patient_text_view_tz_content"
        app:layout_constraintTop_toBottomOf="@+id/text_view_create_patients_title" />

    <TextView
        android:id="@+id/activity_add_patient_text_view_tz_content"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@+id/activity_add_patient_text_view_tz_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_create_patients_title" />

    <EditText
        android:id="@+id/edit_text_patient_first_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:hint="Patient's first name:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_patient_text_view_tz_content"/>

    <EditText
        android:id="@+id/edit_text_patients_last_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="Patient's last name:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_patient_first_name" />

    <EditText
        android:id="@+id/edit_text_patients_diagnosis"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="Diagnosis:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_patients_last_name" />

    <Button
        android:id="@+id/button_create_new_patient"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:text="@string/create_new_patient"
        android:background="@drawable/customized_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_text_patients_diagnosis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>