<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity">

    <EditText
        android:id="@+id/edit_text_set_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:hint="Enter email:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/image_button_email_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_set_email"
        app:layout_constraintTop_toTopOf="@+id/edit_text_set_email"
        app:layout_constraintLeft_toRightOf="@+id/edit_text_set_email"
        app:srcCompat="@drawable/about_icon"/>

    <EditText
        android:id="@+id/edit_text_set_nickname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="(Optional) Enter nickname:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_set_email"/>

    <ImageButton
        android:id="@+id/image_button_nickname_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_set_nickname"
        app:layout_constraintTop_toTopOf="@+id/edit_text_set_nickname"
        app:layout_constraintLeft_toRightOf="@+id/edit_text_set_nickname"
        app:srcCompat="@drawable/about_icon"/>

    <EditText
        android:id="@+id/edit_text_set_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="Enter password:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_set_nickname" />

    <ImageButton
        android:id="@+id/image_button_password_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_set_password"
        app:layout_constraintTop_toTopOf="@+id/edit_text_set_password"
        app:layout_constraintLeft_toRightOf="@+id/edit_text_set_password"
        app:srcCompat="@drawable/about_icon"/>

    <TextView
        android:id="@+id/Choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/choosetxt"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="65dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_verify_password"
        android:textSize="24sp"
        />

    <CheckBox
        android:id="@+id/checkDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/docBox"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/Choose"
        app:layout_constraintTop_toBottomOf="@id/edit_text_verify_password"/>

    <CheckBox
        android:id="@+id/checkFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendBox"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/checkDoc"
        app:layout_constraintTop_toBottomOf="@id/edit_text_verify_password"/>

    <EditText
        android:id="@+id/edit_text_verify_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="Re-enter password:"
        android:textSize="15dp"
        android:textAppearance="@color/colorAccent"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_set_password" />

    <ImageButton
        android:id="@+id/image_button_verify_password_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_verify_password"
        app:layout_constraintTop_toTopOf="@+id/edit_text_verify_password"
        app:layout_constraintLeft_toRightOf="@+id/edit_text_verify_password"
        app:srcCompat="@drawable/about_icon"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="Sign Up"
        app:layout_constraintTop_toBottomOf="@id/checkDoc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
